Added test for dataset generation, and finished upgrades to dataset tag system.